--- a/index.html
+++ b/index.html
@@ -12,24 +12,25 @@
 <body>
   <header id="navbar">
     <nav class="navbar-container container">
-      <a href="/" class="home-link">
-        <div class="navbar-logo"></div>
-        Website Name
-      </a>
-      <button type="button" class="navbar-toggle" aria-controls="navbar-menu" aria-label="Toggle menu"
-        aria-expanded="false">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <div id="navbar-menu">
-        <ul class="navbar-links">
-          <li class="navbar-item"><a class="navbar-link" href="/about">About</a></li>
-          <li class="navbar-item"><a class="navbar-link" href="/blog">Blog</a></li>
-          <li class="navbar-item"><a class="navbar-link" href="/careers">Careers</a></li>
-          <li class="navbar-item"><a class="navbar-link" href="/contact">Contact</a></li>
-        </ul>
+      <div class="logo-container">
+        <a href="/" class="home-link">
+          <img src="/img/scoot.svg" alt="Scoot logo">
+        </a>
+        <button type="button" class="navbar-toggle" aria-controls="navbar-menu" aria-label="Toggle menu"
+          aria-expanded="false">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <div id="navbar-menu">
+          <ul class="navbar-links">
+            <li class="navbar-item"><a class="navbar-link" href="/about">About</a></li>
+            <li class="navbar-item"><a class="navbar-link" href="/careers">Careers</a></li>
+            <li class="navbar-item"><a class="navbar-link" href="/contact">Location</a></li>
+          </ul>
+        </div>
       </div>
+      <button type="button" class="get-scootin">Get Scootin</button>
     </nav>
   </header>
 
