--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         <a href="/" class="home-link">
           <img src="/img/scoot.svg" alt="Scoot logo">
         </a>
-        <button type="button" class="navbar-toggle" aria-controls="navbar-menu" aria-label="Toggle menu"
-          aria-expanded="false">
+        <button type="button" class="navbar-toggle" aria-controls="navbar-menu" aria-label="Toggle menu" aria-expanded="false">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -26,8 +25,9 @@
           <ul class="navbar-links">
             <li class="navbar-item"><a class="navbar-link" href="/about">About</a></li>
             <li class="navbar-item"><a class="navbar-link" href="/careers">Careers</a></li>
-            <li class="navbar-item"><a class="navbar-link" href="/contact">Location</a></li>
+            <li class="navbar-item"><a class="navbar-link" href="/cont  act">Location</a></li>
           </ul>
+          <button type="button" class="get-scootin">Get Scootin</button>
         </div>
       </div>
       <button type="button" class="get-scootin">Get Scootin</button>
