--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
       <img class="hero-line" src="/img/line.svg" alt="Stright line">
       <div class="hero-description">
         <p>Scoot takes the hassle out of urban mobility. Our bikes are placed in convenient locations in each of our cities. Use our app to locate the nearest bike, unlock it with a tap, and you’re away!</p>
+        <button type="button" class="get-scootin">Get Scootin</button>
       </div>
-      <button type="button" class="get-scootin">Get Scootin</button>
       <img class="hero-arrow" src="/img/arrow-to-right.svg" alt="Arrow to right">
-      <img class="hero-ovals" src="/img/ovals.png" alt="ovals">
+      <img class="hero-ovals" src="/img/oval-1.png" alt="ovals">
     </div>
   </section>
   <!-- /Hero section -->
