new sections added

--- a/index.html
+++ b/index.html
@@ -49,6 +49,55 @@
   </section>
   <!-- /Hero section -->
 
+  <!-- steps section -->
+  <section class="steps">
+    <div class="container">
+      <div class="row">
+        <div class="col-4 step">
+          <img src="/img/step-locate.svg" alt="Step locate">
+          <div class="step-description">
+            <h3>Locate with app</h3>
+            <p>Use the app to find the nearest scooter to you. We are continuously placing scooters in the areas with most demand, so one should never be too far away.</p>
+          </div>
+        </div>
+        <div class="col-4 step">
+          <img src="/img/step-pick-scooter.svg" alt="Step pick a scooter">
+          <div class="step-description">
+            <h3>Pick your scooter</h3>
+            <p>We show the most important info for the scooters closest to you. So you know how much charge they have left and can see roughly how much it will cost.</p>
+          </div>
+        </div>
+        <div class="col-4 step">
+          <img src="/img/step-enjoy-ride.svg" alt="Step locate">
+          <div class="step-description">
+            <h3>Enjoy the ride</h3>
+            <p>Scan the QR code and the bike will unlock. Retract the cable lock, put on a helmet, and you’re off! Always lock bikes away from walkways and accessibility ramps.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- /steps section -->
+
+  <!-- Telemetry section -->
+  <section class="telemetry">
+    <div class="container">
+      <div class="row">
+        <div class="col-6">
+          <div class="telemetry-desc">
+            <h2>Easy to use riding telemetry</h2>
+            <p>The Scoot app is available with riding telemetry. This means it can show you your average speed, how long you've been using the scooter, your traveling distance, and many more things all in an easy to use app.</p>
+            <button type="button" class="get-scootin">Learn More</button>
+          </div>
+        </div>
+        <div class="col-6">
+          <img class="circle-img" src="/img/girl-with-phone.png" alt="Girl with phone">
+          <img class="telemetry-arrow" src="/img/arrow-to-left.svg" alt="Arrow to left">
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- /Telemetry section -->
 
   <script src="/js/main.js"></script>
 </body>
