--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <!-- /steps section -->
 
   <!-- Telemetry section -->
-  <section class="telemetry">
+  <section class="telemetry first">
     <div class="container">
       <div class="row">
         <div class="col-6">
@@ -92,10 +92,48 @@
         </div>
         <div class="col-6">
           <img class="circle-img" src="/img/girl-with-phone.png" alt="Girl with phone">
-          <img class="telemetry-arrow" src="/img/arrow-to-left.svg" alt="Arrow to left">
+
         </div>
       </div>
     </div>
+    <img class="telemetry-arrow" src="/img/arrow-to-left.svg" alt="Arrow to left">
+  </section>
+
+  <section class="telemetry second">
+    <div class="container">
+      <div class="row">
+        <div class="col-6">
+          <div class="telemetry-desc">
+            <h2>Coming to a city near you</h2>
+            <p>Scoot is available in 4 major cities so far. We’re expanding rapidly, so be sure to let us know if you want to see us in your hometown. We’re aiming to let our scooters loose on 23 cities over the coming year.</p>
+            <button type="button" class="get-scootin">Learn More</button>
+          </div>
+        </div>
+        <div class="col-6">
+          <img class="circle-img" src="/img/city.png" alt="City">
+        </div>
+      </div>
+    </div>
+    <img class="right-arrow" src="/img/arrow-to-right.svg" alt="">
+  </section>
+
+  <section class="telemetry first">
+    <div class="container">
+      <div class="row">
+        <div class="col-6">
+          <div class="telemetry-desc">
+            <h2>Zero hassle payments</h2>
+            <p>Our payment is as easy as one two three. We accept most credit cards and debit cards. You can also link your PayPal account inside the app. Need to pay later? No worries! You can defer payment for up to a month.</p>
+            <button type="button" class="get-scootin">Learn More</button>
+          </div>
+        </div>
+        <div class="col-6">
+          <img class="circle-img" src="/img/wallet.png" alt="Wallet">
+
+        </div>
+      </div>
+    </div>
+    <img class="telemetry-arrow" src="/img/arrow-to-left.svg" alt="Arrow to left">
   </section>
   <!-- /Telemetry section -->
 
