Some news added

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <img class="right-arrow" src="/img/arrow-to-right.svg" alt="">
   </section>
 
-  <section class="telemetry first">
+  <section class="telemetry third">
     <div class="container">
       <div class="row">
         <div class="col-6">
@@ -136,6 +136,22 @@
     <img class="telemetry-arrow" src="/img/arrow-to-left.svg" alt="Arrow to left">
   </section>
   <!-- /Telemetry section -->
+
+  <!-- Sign up links section -->
+  <section class="sign-up-links">
+    <div class="container">
+      <div class="row">
+        <div class="col-6">
+          <h2>Sign up and <br> Scoot off today</h2>
+        </div>
+        <div class="col-6">
+          <a href="#"><img class="app-store" src="/img/app-store.svg" alt="App store"></a>
+          <a href="#"><img class="google-play" src="/img/google-play.svg" alt="Google play"></a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- /Sign up links section -->
 
   <script src="/js/main.js"></script>
 </body>
