about page added

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </button>
         <div id="navbar-menu">
           <ul class="navbar-links">
-            <li class="navbar-item"><a class="navbar-link" href="/about">About</a></li>
+            <li class="navbar-item"><a class="navbar-link" href="about.html">About</a></li>
             <li class="navbar-item"><a class="navbar-link" href="/careers">Careers</a></li>
             <li class="navbar-item"><a class="navbar-link" href="/cont  act">Location</a></li>
           </ul>
@@ -152,6 +152,30 @@
     </div>
   </section>
   <!-- /Sign up links section -->
+
+  <!-- Footer section -->
+  <footer class="footer">
+    <div class="container">
+      <div class="footer-content">
+        <div class="footer-links">
+          <ul>
+            <li><a href="/"><img src="/img/scoot-white.png" alt="Logo"></a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Location</a></li>
+            <li><a href="#">Careers</a></li>
+          </ul>
+        </div>
+        <div class="social-media">
+          <ul>
+            <li><a class="facebook" title="Facebook" href="#"><img src="/img/facebook.png" alt="Facebook"></a></li>
+            <li><a class="twitter" title="Twitter" href="#"><img src="/img/twitter.png" alt="Twitter"></a></li>
+            <li><a class="instagramm" title="Instagramm" href="#"><img src="/img/instagramm.png" alt="Instagramm"></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!-- /Footer section -->
 
   <script src="/js/main.js"></script>
 </body>
