About pasge's new features added

--- a/about.html
+++ b/about.html
@@ -35,10 +35,83 @@
 
   <!-- Hero section -->
   <section class="about-hero">
-    <div class="container">
-      <h1>About</h1>
-    </div>
+      <div class="container">
+        <h1 class="about-title">About</h1>
+      </div>
   </section>
   <!-- /Hero section -->
+
+  <!-- Telementry section -->
+  <section class="telemetry first">
+    <div class="container">
+      <div class="row">
+        <div class="col-6">
+          <div class="telemetry-desc">
+            <h2>Mobility for the digital era</h2>
+            <p>Getting around should be simple (and even fun!) for everyone. We embrace technology to provide low cost, smart access to scooters at your fingertips.</p>
+          </div>
+        </div>
+        <div class="col-6">
+          <img class="circle-img" src="/img/about-phone-with-girl.png" alt="Girl with phone">
+
+        </div>
+      </div>
+    </div>
+    <img class="telemetry-arrow" src="/img/arrow-to-left-top.svg" alt="Arrow to left">
+  </section>
+
+  <section class="telemetry second">
+    <div class="container">
+      <div class="row">
+        <div class="col-6">
+          <div class="telemetry-desc">
+            <h2>Better urban living</h2>
+            <p>We’re helping connect cities and bring people closer together. Our scooters are also fully-electric and we offset the minimal carbon footprint for each ride.</p>
+          </div>
+        </div>
+        <div class="col-6">
+          <img class="circle-img" src="/img/about-train.png" alt="City">
+        </div>
+      </div>
+    </div>
+    <img class="right-arrow" src="/img/arrow-to-right.svg" alt="Arrow to right">
+  </section>
+  <!-- /Telementry section -->
+
+  <!-- Our values section -->
+  <section class="our-values">
+    <div class="container">
+      <h2 class="our-values-title">Our values</h2>
+      <div class="row">
+        <div class="col-4">
+          <div class="image-content">
+            <img src="/img/about-phone-man.png" alt="Phone">
+            <span>01</span>
+          </div>
+          <h3>Our tech</h3>
+          <p>We’re using cutting edge technology to drive accessible urban transportation forward. Our fully electric scooters are a joy to ride!</p>
+        </div>
+        <div class="col-4">
+          <div class="image-content">
+            <img src="/img/about-scooter-man.png" alt="Man with scooter">
+            <span>02</span>
+          </div>
+          <h3>Our integrity</h3>
+          <p>We are fully committed to deliver a great yet safe, sustainable micro-mobility experience in every city we serve.</p>
+        </div>
+        <div class="col-4">
+          <div class="image-content">
+            <img src="/img/about-people.png" alt="People">
+            <span>03</span>
+          </div>
+          <h3>Our community</h3>
+          <p>We support every community we serve. All workers are paid a living wage based on their location and are Scoot employees.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- /Our values section -->
+
+  <script src="/js/main.js"></script>
 </body>
 </html>
