Last changes added

--- a/about.html
+++ b/about.html
@@ -23,8 +23,8 @@
         <div id="navbar-menu">
           <ul class="navbar-links">
             <li class="navbar-item"><a class="navbar-link" href="about.html">About</a></li>
-            <li class="navbar-item"><a class="navbar-link" href="/careers">Careers</a></li>
-            <li class="navbar-item"><a class="navbar-link" href="/cont  act">Location</a></li>
+            <li class="navbar-item"><a class="navbar-link" href="careers.html">Careers</a></li>
+            <li class="navbar-item"><a class="navbar-link" href="location.html">Location</a></li>
           </ul>
           <button type="button" class="get-scootin">Get Scootin</button>
         </div>
@@ -111,6 +111,114 @@
     </div>
   </section>
   <!-- /Our values section -->
+
+  <!-- FAQs section -->
+  <section class="faqs">
+    <div class="container">
+      <h2 class="faqs-title">FAQs</h2>
+      <div class="row">
+        <div class="col-4">
+          <h2>How it works</h2>
+        </div>
+        <div class="col-8">
+          <ul class="tabs">
+            <li class="tab">
+              <input id="tab-one" type="checkbox" name="tabs">
+              <label for="tab-one">How do I download the app?</label>
+              <div class="tab-content">
+                <p >To download the Scoot app, you can search “Scoot” in both the App and Google Play stores. An even simpler way to do it would be to click the relevant link at the bottom of this page and you’ll be re-directed to the correct page.</p>
+              </div>
+            </li>
+            <li class="tab">
+              <input id="tab-two" type="checkbox" name="tabs">
+              <label for="tab-two">Can I find a nearby Scoots?</label>
+              <div class="tab-content">
+                <p >To download the Scoot app, you can search “Scoot” in both the App and Google Play stores. An even simpler way to do it would be to click the relevant link at the bottom of this page and you’ll be re-directed to the correct page.</p>
+              </div>
+            </li>
+            <li class="tab">
+              <input id="tab-three" type="checkbox" name="tabs">
+              <label for="tab-three">Do I need a license to ride?</label>
+              <div class="tab-content">
+                <p >To download the Scoot app, you can search “Scoot” in both the App and Google Play stores. An even simpler way to do it would be to click the relevant link at the bottom of this page and you’ll be re-directed to the correct page.</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-4">
+          <h2>Safe driving</h2>
+        </div>
+        <div class="col-8">
+          <ul class="tabs">
+            <li class="tab">
+              <input id="tab-four" type="checkbox" name="tabs">
+              <label for="tab-four">Should I wear a helmet?</label>
+              <div class="tab-content">
+                <p >Yes, please do! All cities have different laws. But we strongly strongly strongly recommend always wearing a helmet regardless of the local laws. We like you and we want you to be as safe as possible while Scooting.</p>
+              </div>
+            </li>
+            <li class="tab">
+              <input id="tab-five" type="checkbox" name="tabs">
+              <label for="tab-five">How about the rules & regulations?</label>
+              <div class="tab-content">
+                <p >To download the Scoot app, you can search “Scoot” in both the App and Google Play stores. An even simpler way to do it would be to click the relevant link at the bottom of this page and you’ll be re-directed to the correct page.</p>
+              </div>
+            </li>
+            <li class="tab">
+              <input id="tab-six" type="checkbox" name="tabs">
+              <label for="tab-six">What if I damage my Scoot?</label>
+              <div class="tab-content">
+                <p >To download the Scoot app, you can search “Scoot” in both the App and Google Play stores. An even simpler way to do it would be to click the relevant link at the bottom of this page and you’ll be re-directed to the correct page.</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- /FAQs section -->
+
+    <!-- Sign up links section -->
+    <section class="sign-up-links">
+      <div class="container">
+        <div class="row">
+          <div class="col-6">
+            <h2>Sign up and <br> Scoot off today</h2>
+          </div>
+          <div class="col-6">
+            <a href="#"><img class="app-store" src="/img/app-store.svg" alt="App store"></a>
+            <a href="#"><img class="google-play" src="/img/google-play.svg" alt="Google play"></a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- /Sign up links section -->
+
+    <!-- Footer section -->
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-content">
+          <div class="footer-links">
+            <ul>
+              <li><a href="/"><img src="/img/scoot-white.png" alt="Logo"></a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="location.html">Location</a></li>
+              <li><a href="careers.html">Careers</a></li>
+            </ul>
+          </div>
+          <div class="social-media">
+            <ul>
+              <li><a class="facebook" title="Facebook" href="#"><img src="/img/facebook.png" alt="Facebook"></a></li>
+              <li><a class="twitter" title="Twitter" href="#"><img src="/img/twitter.png" alt="Twitter"></a></li>
+              <li><a class="instagramm" title="Instagramm" href="#"><img src="/img/instagramm.png" alt="Instagramm"></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- /Footer section -->
 
   <script src="/js/main.js"></script>
 </body>
