--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <!-- Header section -->
   <header id="navbar">
     <nav class="navbar-container container">
       <div class="logo-container">
@@ -24,8 +25,8 @@
         <div id="navbar-menu">
           <ul class="navbar-links">
             <li class="navbar-item"><a class="navbar-link" href="about.html">About</a></li>
-            <li class="navbar-item"><a class="navbar-link" href="/careers">Careers</a></li>
-            <li class="navbar-item"><a class="navbar-link" href="/cont  act">Location</a></li>
+            <li class="navbar-item"><a class="navbar-link" href="careers.html">Careers</a></li>
+            <li class="navbar-item"><a class="navbar-link" href="/location.html">Location</a></li>
           </ul>
           <button type="button" class="get-scootin">Get Scootin</button>
         </div>
@@ -33,6 +34,7 @@
       <button type="button" class="get-scootin">Get Scootin</button>
     </nav>
   </header>
+  <!-- /Header section -->
 
   <!-- Hero section -->
   <section class="hero">
@@ -160,9 +162,9 @@
         <div class="footer-links">
           <ul>
             <li><a href="/"><img src="/img/scoot-white.png" alt="Logo"></a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Location</a></li>
-            <li><a href="#">Careers</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="location.html">Location</a></li>
+            <li><a href="careers.html">Careers</a></li>
           </ul>
         </div>
         <div class="social-media">
